crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__if_recovery_4.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_expr_string(r#\"if True else\"#)"
---
Node {
    node: Identifier(
        Identifier {
            names: [
                Node {
                    node: "if",
                    filename: "",
                    line: 1,
                    column: 0,
                    end_line: 1,
                    end_column: 2,
                },
            ],
            pkgpath: "",
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}

